--- a/css/style.css
+++ b/css/style.css
@@ -1,147 +1,3 @@
-/*
-Copyright (c) 2010, Yahoo! Inc. All rights reserved.
-Code licensed under the BSD License:
-http://developer.yahoo.com/yui/license.html
-version: 2.8.1
-*/
-body,
-div,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-code,
-form,
-fieldset,
-legend,
-input,
-button,
-textarea,
-p,
-blockquote,
-th,
-td {
-  margin: 0;
-  padding: 0;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-fieldset,
-img {
-  border: 0;
-}
-address,
-caption,
-cite,
-code,
-dfn,
-em,
-strong,
-th,
-var,
-optgroup {
-  font-style: inherit;
-  font-weight: inherit;
-}
-del,
-ins {
-  text-decoration: none;
-}
-li {
-  list-style: none;
-}
-caption,
-th {
-  text-align: left;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
-}
-q:before,
-q:after {
-  content: "";
-}
-abbr,
-acronym {
-  border: 0;
-  font-variant: normal;
-}
-sup {
-  vertical-align: baseline;
-}
-sub {
-  vertical-align: baseline;
-}
-legend {
-  color: #000;
-}
-input,
-button,
-textarea,
-select,
-optgroup,
-option {
-  font-family: inherit;
-  font-size: inherit;
-  font-style: inherit;
-  font-weight: inherit;
-}
-input,
-button,
-textarea,
-select {
-  *font-size: 100%;
-}
-
-/*
-Copyright (c) 2010, Yahoo! Inc. All rights reserved.
-Code licensed under the BSD License:
-http://developer.yahoo.com/yui/license.html
-version: 2.8.1
-*/
-body {
-  font: 13px/1.231 arial, helvetica, clean, sans-serif;
-  *font-size: small;
-  *font: x-small;
-}
-select,
-input,
-button,
-textarea,
-button {
-  font: 99% arial, helvetica, clean, sans-serif;
-}
-table {
-  font-size: inherit;
-  font: 100%;
-}
-pre,
-code,
-kbd,
-samp,
-tt {
-  font-family: monospace;
-  *font-size: 108%;
-  line-height: 100%;
-}
-
 body {
   background: url(images/bg_main.png) top center repeat-y #eeeeee;
   color: #333;
@@ -253,11 +109,22 @@ li {
 #lead {
   margin-bottom: 1em;
 }
-
+#top_right {
+  margin-top: 30px;
+  height: auto;
+}
+#top_right h3 {
+  font-size: 22px;
+  font-weight: bold;
+  background: url(../images/new_icon.png) no-repeat;
+  background-size: 30px;
+  padding-left: 35px;
+}
 .msg {
   clear: both;
   border-top: 1px solid #ccc;
   padding: 10px 0;
+  height: 80px;
 }
 .msg img {
   float: left;
@@ -268,6 +135,7 @@ li {
 }
 .msg .day,
 .msg .day a {
-  font-size: 80%;
-  color: #999;
+  font-size: 18px;
+  font-weight: bold;
+  color: #f6ac4d;
 }
