--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,9 @@ body {
 }
 
 #head {
-  border-left: 1px solid #d4d4d4;
-  border-right: 1px solid #d4d4d4;
-  border-bottom: 1px solid #d4d4d4;
-  background: url(images/bg_head.png) bottom left repeat-x #106eb7;
+  width: 100%;
+  height: 102px;
+  background-color: #02c39a;
   color: #fff;
   padding: 20px;
   margin-bottom: 20px;
@@ -123,7 +122,8 @@ li {
 .msg {
   clear: both;
   border-top: 1px solid #ccc;
-  padding: 10px 0;
+  padding: 15px 0;
+  margin-top: 10px;
   height: 80px;
 }
 .msg img {
@@ -135,7 +135,19 @@ li {
 }
 .msg .day,
 .msg .day a {
-  font-size: 18px;
+  font-size: 12px;
   font-weight: bold;
   color: #f6ac4d;
+  padding-left: 10px;
+}
+span.new_date {
+  color: #dcdddf;
+  font-size: 12px;
+  background: url(../images/new_date.png) no-repeat;
+  padding-left: 18px;
+}
+span.new_tag {
+  font-size: 12px;
+  background: url(../images/tag.png) no-repeat;
+  padding-left: 18px;
 }
