--- a/css/index.css
+++ b/css/index.css
@@ -149,7 +149,7 @@ th {
 
 .paging {
   width: auto;
-  height: 32px;
+  height: 64px;
   margin-top: 10px;
   text-align: center;
 }
@@ -217,6 +217,20 @@ span.new_tag {
   background: url(../images/tag.png) no-repeat;
   background: cover;
   padding-left: 18px;
+}
+/* フッター */
+footer {
+  width: 100%;
+  height: 58px;
+  background-color: #345c39;
+  border-top: 3px solid #f6ac4d;
+  margin-top: 20px;
+  font-size: 12px;
+  color: #fff;
+  text-align: center;
+}
+footer p {
+  line-height: 58px;
 }
 
 @media screen and (max-width: 768px) {
